add_executable(a "")

target_compile_features(a PRIVATE cxx_std_17)

target_sources(a PRIVATE
                          # main.cc
                          # 1002_Turret.cc
                          # 1003_Fibonacci.cc
                          # 1550_Hexadecimal.cc
                          # 1977_SquareNumber.cc
                          # 2908_Constant.cc
                          # 3003_King_Queen_Look_Bishop_Night_Phone.cc
                          5337_Welcome.cc
                          # 11098_HelpChelsea.cc
                          # 15649_N_M_1.cc
                          # 15650_N_M_2.cc
                          # 15651_N_M_3.cc
                          # 15652_N_M_4.cc
                          # 15654_N_M_5.cc
                          # 15655_N_M_6.cc
                          # 15656_N_M_7.cc
                          # 15657_N_M_8.cc
                          # 15792_A÷B_2.cc
)