add_executable(a "")

target_compile_features(a PRIVATE cxx_std_17)

target_sources(a PRIVATE
                          # main
                          # 1002_Turret
                          # 1003_Fibonacci
                          # 1550_Hexadecimal
                          # 1977_SquareNumber
                          # 2908_Constant
                          # 3003_King_Queen_Look_Bishop_Night_Phone
                          # 5337_Welcome
                          # 5338_MicrosoftLogo
                          # 5339_CallCenter
                          # 5522_CardGame
                          # 5554_RoadForErrand
                          # 6749_NextInLine
                          # 9653_StarWarsLogo
                          9654_FleetOfNavu
                          # 11098_HelpChelsea
                          # 15649_N_M_1
                          # 15650_N_M_2
                          # 15651_N_M_3
                          # 15652_N_M_4
                          # 15654_N_M_5
                          # 15655_N_M_6
                          # 15656_N_M_7
                          # 15657_N_M_8
                          # 15792_A÷B_2
)