add_executable(a "")

target_compile_features(a PRIVATE cxx_std_17)

target_sources(a PRIVATE
                          # cpp.cc
                          10101_RemindTriangle.cc
                          # main.cc
                          # 1002_Turret.cc
                          # 1003_Fibonacci.cc
                          # 1550_Hexadecimal.cc
                          # 1977_SquareNumber.cc
                          # 2908_Constant.cc
                          # 3003_King_Queen_Look_Bishop_Night_Phone.cc
                          # 5337_Welcome.cc
                          # 5338_MicrosoftLogo.cc
                          # 5339_CallCenter.cc
                          # 5522_CardGame.cc
                          # 5554_RoadForErrand.cc
                          # 6749_NextInLine.cc
                          # 9653_StarWarsLogo.cc
                          # 9654_FleetOfNavu.cc
                          # 10170_NFC_West_vs_North.cc
                          # 11098_HelpChelsea.cc
                          # 11382_Kids.cc
                          # 11942_KoreaUniversity.cc
                          # 15649_N_M_1.cc
                          # 15650_N_M_2.cc
                          # 15651_N_M_3.cc
                          # 15652_N_M_4.cc
                          # 15654_N_M_5.cc
                          # 15655_N_M_6.cc
                          # 15656_N_M_7.cc
                          # 15657_N_M_8.cc
                          # 15792_A÷B_2.cc
)